# rust-template

./: Cargo.toml  Dockerfile  Makefile  README.md  rust-installer.sh
src/: main.rs
